feat: update ncdu to 1.22-1
Signed-off-by: lhdjply <lhdjply@126.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+1.22 - 2025-03-05
+	- Add support for @-prefixed lines to ignore errors in config file (from 2.8)
+	- List all supported options in `--help` (from 2.8)
+	- Use `kB` instead of `KB` in `--si` mode (from 2.8)
+	- Add `--graph-style` option (from 2.1)
+	- Fix supported range of uid/gid numbers
+
+1.21 - 2024-11-19
+	- Perform tilde expansion on paths in the config file (from 2.7)
+	- Fix JSON import of escaped UTF-16 surrogate pairs (from 2.7)
+	- Fix displaying and exporting zero values when extended info is not
+	  available (from 2.6)
+	- Fix JSON export and import of the “other filesystem” flag (from 2.5)
+
+1.20 - 2024-04-21
+	- Revert default color scheme back to 'off'
+	- Rewrite man page in mdoc, drop pod2man dependency
+
+1.19 - 2023-09-11
+	- Fix typo in --exclude-from argument
+	- Add --(enable|disable)-natsort options
+	- Add indicator to apparent size/disk usage selection in the footer
+
 1.18.1 - 2023-02-12
 	- Fix build on non-Linux platforms
 
