--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-ncdu 1.18.1
-===========
+ncdu 1.22
+=========
 
 DESCRIPTION
 
@@ -25,15 +25,14 @@ INSTALL
     make
     make install
 
-  If you're building directly from the git repository, make sure you have perl
-  (or rather, pod2man), pkg-config and GNU autoconf/automake installed, then
-  run 'autoreconf -i', and you're ready to continue with the usual ./configure
-  and make route.
+  If you're building directly from the git repository, make sure you have
+  pkg-config and GNU autoconf/automake installed, then run 'autoreconf -i',
+  and you're ready to continue with the usual ./configure and make route.
 
 
 COPYING
 
-  Copyright (c) 2007-2023 Yoran Heling
+  Copyright (c) Yorhel
 
   Permission is hereby granted, free of charge, to any person obtaining
   a copy of this software and associated documentation files (the
